dashboard,employeetable,view-form, component ,and also web ap completed

--- a/DataCorner/appsettings.json
+++ b/DataCorner/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ttdconnection": "server=localhost;user=root;database=ttd;port=3306;password=password "
+    "ttdconnection": "Data Source=localhost;Database=ttd;User ID=root;password=password"
   },
   "Logging": {
     "LogLevel": {
