--- a/DataCorner/TD/package.json
+++ b/DataCorner/TD/package.json
@@ -22,9 +22,11 @@
     "@angular/router": "^16.1.0",
     "apexcharts": "^3.41.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.4.0",
     "cors": "^2.8.5",
     "file-saver": "^2.0.5",
     "ng-apexcharts": "^1.8.0",
+    "ng2-charts": "^5.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
