--- a/DataCorner/TD/package.json
+++ b/DataCorner/TD/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@types/xlsx": "^0.0.36",
     "apexcharts": "^3.41.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.4.0",
