--- a/DataCorner/appsettings.json
+++ b/DataCorner/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    "ttdconnection": "Data Source=localhost;Database=ttd;User ID=root;password=password"
+    //"ttdconnection": "Data Source=localhost;Database=ttd;User ID=root;password=password"
     //"ttdconnection": "Data Source=localhost;Database=ttd;User ID=root;password=Praveen@123",
-    //"ttdconnection": "Data Source=localhost;Database=ttd;User ID=root;password=Mechon@17"
+    "ttdconnection": "Data Source=localhost;Database=ttd;User ID=root;password=Mechon@17"
 
   },
   "Logging": {
