Server port and environment.development.ts port set

--- a/DataCorner/appsettings.json
+++ b/DataCorner/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    //"ttdconnection": "Data Source=localhost;Database=ttd;User ID=root;password=password",
+    "ttdconnection": "Data Source=localhost;Database=ttd;User ID=root;password=password",
     //"ttdconnection": "Data Source=localhost;Database=ttd;User ID=root;password=Praveen@123",
     //"ttdconnection": "Data Source=localhost;Database=ttd;User ID=root;password=Mechon@17"
-    "ttdconnection": "Data Source=122.165.75.36;Database=data_corner;User ID=DC;password=DC@2023"
+    //"ttdconnection": "Data Source=122.165.75.36;Database=data_corner;User ID=DC;password=DC@2023"
 
   },
   "Logging": {
